fixed issues in quote flow

--- a/src/com/maan/quotation/package.properties
+++ b/src/com/maan/quotation/package.properties
@@ -3,12 +3,19 @@ quotation.title=Title
 quotation.customerName=Name
 quotation.customerNameAr=Customer Name (Arabic)
 quotation.coreAppCode=Core Application Code
+quotation.state=State
 quotation.city=City
 quotation.poBox=P.O.Box
 quotation.address1=Address 1
 quotation.address2=Address 2
 quotation.email=Email
 quotation.mobileNo=Mobile Number
+quotation.customerType=Customer Type
+quotation.gstno=GST Identification Number
+quotation.aadharNumber=Aadhaar Number
+quotation.eiaNumber=EIA Number
+quotation.iaCode=IA No Code
+quotation.sezYn=SEZ Available
 quotation.quoteInfo=Quote Information
 quotation.modeOfTransport=Mode of Transport
 quotation.cover=Cover
