--- a/src/com/maan/NewOpenCover/package.properties
+++ b/src/com/maan/NewOpenCover/package.properties
@@ -13,7 +13,7 @@ label.extrainfo=Extra Information
 label.anualEst=Annual Estimated Turnover
 label.utilized=Utilized Amount
 label.currency=Currency
-label.sharepercent=AlRajhi Shared Percentage
+label.sharepercent=SBI Shared Percentage
 label.noofcoins=No.of Co-Insurance Company
 label.crossvoyage=Cross Voyage
 label.crossvoyagepercent=Cross Voyage(%)
