--- a/src/com/maan/quotation/package.properties
+++ b/src/com/maan/quotation/package.properties
@@ -268,7 +268,7 @@ policyInfo.schedule=Schedule
 policyInfo.debit=Debit Note
 policyInfo.credit=Credit Note
 policyInfo.draft=Draft
-policyInfo.referralMsg=Your Quotation has been referred to AlRajhi Underwriter. AlRajhi Representative will contact you. 
+policyInfo.referralMsg=Your Quotation has been referred to SBI Underwriter. SBI Representative will contact you. 
 policyInfo.endtSchedule=Endorsement Schedule 
 policyInfo.yourPolicyNumberis = Your Policy Number is
 conditions1=Clauses
@@ -387,3 +387,7 @@ motor.sNo=S.No
 motor.back = Back
 motor.proceed =Proceed
 quotation.vatReg=VAT Reg No
+quotation.originaddress=Originating Address  
+quotation.destinaddress=Destination Address
+quotation.surveyagent=Survey Agent 
+quotation.hypo=Hypothecation Details
