open cover changes done

--- a/src/com/maan/NewOpenCover/package.properties
+++ b/src/com/maan/NewOpenCover/package.properties
@@ -120,3 +120,21 @@ label.remarks=Remarks
 label.cusromerId=Customer Id
 label.email=Email
 label.view=View
+label.underwriter=Underwriter
+label.cobrokingYn=Co - Broking ?
+label.noofCobroking=No.of Co-Broking
+label.cobrokinghunYN=Co-Broking Leader 100%?
+label.policyType=Policy Type
+label.importYn=Import Duty
+label.serviceTaxYN=SEZ
+label.rateModifyYN=Rate Modify
+label.ratingType=Rating Type
+label.exposureVlaue=Loss percentage
+label.loaddiscountYN=Loading/Discount
+label.loadingPercent=Loading(%)
+label.discountPercent=Discount(%)
+label.consolidateGstYN=Consolidated GST?
+label.globalPolicy=Global Policy
+label.globalBusiness=Global Business
+label.facshare=Fac Share(%)
+label.inwardfacYN=Inward Fac
