added import duty in scren

--- a/src/com/maan/quotation/package.properties
+++ b/src/com/maan/quotation/package.properties
@@ -391,3 +391,7 @@ quotation.originaddress=Originating Address
 quotation.destinaddress=Destination Address
 quotation.surveyagent=Survey Agent 
 quotation.hypo=Hypothecation Details
+commodity.dutyinsuredValue=Duty Value
+premiumInfo.importrate=Import Rate
+premiuminfo.ricode=RI Code
+premiumInfo.importpremium=Import Premium
