--- a/src/com/maan/quotation/package.properties
+++ b/src/com/maan/quotation/package.properties
@@ -395,3 +395,4 @@ commodity.dutyinsuredValue=Duty Value
 premiumInfo.importrate=Import Rate
 premiuminfo.ricode=RI Code
 premiumInfo.importpremium=Import Premium
+quotation.identificationno=Identification No/ Markson No 
