--- a/src/com/maan/quotation/package.properties
+++ b/src/com/maan/quotation/package.properties
@@ -355,8 +355,8 @@ endt8=currency
 endt9=warSrcc
 endt11=saleTerm,saleTermPercent,tolerance
 endt12=commodityDesc,cover
-endt13=commodityPackDesc,cover,invoiceNo,commodityDesc,selectCommodity,supplierName,fragile,insuredValue
-endt14=insuredValue
+endt13=commodityPackDesc,cover,invoiceNo,commodityDesc,selectCommodity,supplierName,fragile,insuredValue,dutyValue
+endt14=insuredValue,dutyValue
 endt16=vesselDeclareYN,vesselSearchBy,iHSLRORIMO,nameString,exNameString
 endt17=custContractNo
 endt18=custFmsCaseNo
